feat: Complete Life.D MVP planning (PRD + Epics + GitHub import guide)
- Update project name from bmad2/Journote to Life.D in config
- Create comprehensive PRD with 67 functional requirements
- Break down into 6 epics and 48 detailed user stories (BDD format)
- Add FR coverage matrix (all 67 FRs mapped to stories)
- Create GitHub issues import guide with PowerShell script
- Add project summary with tech stack and success metrics

Ready for: GitHub issue import → UX design → Architecture → Implementation

--- a/.bmad/bmm/config.yaml
+++ b/.bmad/bmm/config.yaml
@@ -3,7 +3,7 @@
 # Version: 6.0.0-alpha.9
 # Date: 2025-11-15T15:28:34.938Z
 
-project_name: bmad2
+project_name: Life.D
 user_skill_level: beginner
 sprint_artifacts: '{project-root}/docs/sprint-artifacts'
 tea_use_mcp_enhancements: true
